Rafactored Code